--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
  </head>
  <body>
    <nav>
-     <ul>
-       <li><a href=”/”>Home</a></li>
-       <li><a href=”/about”>About</a></li>
-       <li><a href=”/resume”>Resume</a></li>
-       <li><a href=”/blog”>Blog</a></li>
-     </ul>
+     <h1>Hi Febeee </h1>
    </nav>
    <div class=”container”>
      <div class=”blurb”>
