--- a/yes.html
+++ b/yes.html
@@ -3,15 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Love Expression</title>
+	<title>Yes</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="container">
-		<div class="love">
-			<h2>Hi, Febeee <span>please forgive me okayy</span>?</h2>
-			<a id="no" href="#">No</a>
-			<a id="yes" href="yes.html">Yes</a>
+		<div class="yes">
+			<h2>Thank You phibii, Semangat pelayanannya hehehehe</h2>
+			<a id="yes" href="index.html">Amen ...</a>
 		</div>
 	</div>
 </body>
